[package]
name = "run_tests_macro"
version = "0.0.1"
authors = ["TheCompiler <info@mariuswilms.dev>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mawilms/rs-unit"
description = """
Run unit test based on sute.
"""
keywords = ["testing", "bdd", "tdd"]
categories = ["development-tools", "development-tools::testing", "development-tools::profiling"]

[dependencies]
syn = { version = "*", features = ["full", "extra-traits"]}
quote = "*"
proc-macro2 = "*"
convert_case = "0.6.0"

[lib]
path = "src/lib.rs"
proc-macro = true